[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/NbPM/TodoDock.gd" type="Script" id=1]

[node name="NbTodo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolbarBox" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 24.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DropdownMenu" type="MenuButton" parent="ToolbarBox"]
margin_left = 1012.0
margin_right = 1024.0
margin_bottom = 24.0

[node name="Tree" type="Tree" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 26.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_pressed" from="Tree" to="." method="_on_Tree_button_pressed"]
[connection signal="item_activated" from="Tree" to="." method="_on_Tree_item_activated"]
